adding jquery link and creating script.js for confirmation

--- a/views/add-story.ejs
+++ b/views/add-story.ejs
@@ -18,7 +18,8 @@
     </div>
     <div class="form-group">
         <label for="storyWrite">Story:</label>
-        <textarea class="form-control" rows="5" id="storyWrite"></textarea>
+        <input name="storyWrite" id="storyWrite" required type="text" />
+        <!--<textarea class="form-control" rows="5" id="storyWrite"  ></textarea>-->
     </div>
     <button class="btn btn-success col-sm-offset-2">Save</button>
 </form>
