--- a/views/stories.ejs
+++ b/views/stories.ejs
@@ -1,5 +1,4 @@
-
-
+<% include partials/header.ejs %>
 <h1><%= title %></h1>
 <a href="/stories/add">Add Your Story</a>
 <table class="table table-striped">
@@ -17,6 +16,7 @@
         <td><%= stories[i].storyWrite %></td>
         <td><a href="/stories/<%= stories[i]._id %>">Edit</a></td>
         <td><a href="/stories/delete/<%= stories[i]._id %>" class="confirmation">Delete</a></td>
+
     </tr>
     <% } %>
 </table>
