--- a/views/edit-story.ejs
+++ b/views/edit-story.ejs
@@ -4,21 +4,36 @@
 <form method="post">
     <div class="form-group">
         <label for="name" class="col-sm-2 control-label">Name:</label>
-        <input name="name" id="name" required />
+        <input name="name" id="name" required value="<%=story.name %>"/>
     </div>
     <div class="form-group">
         <label for="storyType" class="col-sm-2 control-label">Type:</label>
-        <select name="storyType" id="storyType">
-            <option>Fiction</option>
-            <option>Non-Fiction</option>
-            <option>Action</option>
-            <option>Mystery/Thriller</option>
-            <option>Random</option>
+        <select name="storyType" id="storyType" value="<%=story.storyType %>">
+            <% var categories = ['Fiction','Non-Fiction','Action','Mystery/Thriller','Random']
+            var selected = '';
+            for (var i=0; i<categories.length; i++ ){
+            if(categories[i] == story.storyType)
+            {
+                selected = ' selected';
+            }
+            else
+            {
+                selected = '';
+            }
+                 %>
+                    <option<%= selected %>><%= categories[i]%></option>
+                <%  }%>
+
+            <!--<option>Fiction</option>-->
+            <!--<option>Non-Fiction</option>-->
+            <!--<option>Action</option>-->
+            <!--<option>Mystery/Thriller</option>-->
+            <!--<option>Random</option>-->
         </select>
     </div>
     <div class="form-group">
         <label for="storyWrite">Story:</label>
-        <input name="storyWrite" id="storyWrite" required type="text" />
+        <input name="storyWrite" id="storyWrite" required  value="<%=story.storyWrite %>" />
         <!--<textarea class="form-control" rows="5" id="storyWrite"  ></textarea>-->
     </div>
     <button class="btn btn-success col-sm-offset-2">Save</button>
