--- a/views/stories.ejs
+++ b/views/stories.ejs
@@ -5,7 +5,7 @@
     <tr>
         <th>Name</th>
         <th>Type</th>
-        <th>Stories</th>
+        <th>Author</th>
         <th>Edit</th>
         <th>Delete</th>
     </tr>
