--- a/views/add-story.ejs
+++ b/views/add-story.ejs
@@ -17,7 +17,7 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="storyWrite">Story:</label>
+        <label for="storyWrite" class="col-sm-2 control-label">Author:</label>
         <input name="storyWrite" id="storyWrite" required type="text" />
         <!--<textarea class="form-control" rows="5" id="storyWrite"  ></textarea>-->
     </div>
