--- a/views/add-story.ejs
+++ b/views/add-story.ejs
@@ -1,4 +1,5 @@
 <% include partials/header.ejs %>
+<div class="container story">
 <h1>Create your own story</h1>
 
 <form method="post">
@@ -23,5 +24,5 @@
     </div>
     <button class="btn btn-success col-sm-offset-2">Save</button>
 </form>
-
+</div>
 <% include partials/footer.ejs %>
