--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <% include partials/header.ejs %>
+<div class="container story home">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p><%= message %></p>
+</div>
 <% include partials/footer.ejs %>
