--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,13 @@
     <!-- css -->
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" href="/stylesheets/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+
 </head>
-<body>
-<nav class="navbar navbar-default">
-    <ul class="nav navbar-nav">
+<nav class="navbar top-nav">
+    <div class="container">
+        <ul class="nav navbar-nav">
+            <li><a class="logo" href="/">StoryPad</a></li>
         <li><a href="/">Home</a></li>
 <% if (!user){%>
         <li><a href="/register">Register</a> </li>
@@ -26,5 +29,5 @@
         </div>
         <% } %>
     </ul>
-
+</div>
 </nav>
