--- a/views/stories.ejs
+++ b/views/stories.ejs
@@ -21,6 +21,6 @@
     </tr>
     <% } %>
 </table>
-    <a class="story-btn" href="/stories/add">Add Your Story</a>
+    <a class="story-btn" href="/stories/add">Add Your Book</a>
     </div>
 <% include partials/footer.ejs %>
