--- a/views/add-story.ejs
+++ b/views/add-story.ejs
@@ -1,6 +1,6 @@
 <% include partials/header.ejs %>
 <div class="container story">
-<h1>Create your own story</h1>
+<h1>Add your Book</h1>
 
 <form method="post">
     <div class="form-group">
