--- a/views/edit-story.ejs
+++ b/views/edit-story.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>
 
 <div class="container">
-<h1>Create your own story</h1>
+<h1>Add your Book</h1>
 
 <form method="post">
     <div class="form-group">
